@@ -38,6 +38,9 @@ inclusion/exclusion of files works, and how to write patterns.</p>
     compiler)</li>
   <li>jvc (the Command-Line Compiler from Microsoft's SDK for Java /
     Visual J++)</li>
+  <li>kjc (the <a href="http://www.dms.at/kopi/" target="_top">kopi</a>
+    compiler)</li>
+  <li>gcj (the gcj compiler from gcc)</li>
 </ul>
 <p>For JDK 1.1/1.2, classic is the default. For JDK 1.3, modern is the default.
 If you wish to use a different compiler interface than one of the four
@@ -123,7 +126,8 @@ files/directories from the CLASSPATH it passes to the compiler.</p>
   </tr>
   <tr>
     <td valign="top">encoding</td>
-    <td valign="top">encoding of source files.</td>
+    <td valign="top">encoding of source files. (gcj doesn't support
+      this option yet)</td>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
